# DistroProject

./: .gitignore  README.md
SampleProject/: stack.yaml  use-haskell.cabal
SampleProject/src/: Lib.hs  RestClient.hs
Scripts/: nodeInstall.sh
auth-server/: auth-server.js  docker_build.sh  docker_run.sh  index.js  package.json
client-proxy/: clientproxy.cabal  run.sh  stack.yaml
client-proxy/app/: Address.hs  Main.hs  Port.hs  Server.hs
directory-server/: file_servers.js  heartbeat.js  index.js  installMongoDB.sh  package.json
file-server/: Dockerfile  encryption_handler.js  encrytion_handler.js  file-server.js  generateKeyPair.sh  index.js  init.js  package.json  peers.js  socketVariables.js  socket_variables.js
file-server/deploy_scripts/: docker_deploy.sh  docker_run.sh
